<resources>
    <!-- General -->
    <string name="app_name">HarmoniaLauncher</string>

    <string name="lock_activity_name">Lock Activity</string>
    <string name="phone_icon_desc">Phone Icon</string>
    <string name="text_icon_desc">Text Icon</string>
    <string name="camera_icon_desc">Camera Icon</string>
    <string name="gallery_icon_desc">Gallery Icon</string>
    <string name="email_icon_desc">Email Icon</string>
    <string name="contacts_icon_desc">Contacts Icon</string>
    <string name="settings_icon_desc">Settings Icon</string>
    <string name="file_sys_icon_desc">File Sys Icon</string>
    <string name="wallpaper">Wallpaper</string>

    <!-- App APK names -->
    <string name="phone_apk">com.sec.android.app.phoneutil</string>

    <!-- Settings Activity -->
    <string name="menu_item_name">Menu Item Name</string>
    <string name="menu_item_icon">Menu Item Icon</string>
    <string name="settings_activity_title">Settings</string>

    <!-- Whitelist -->
    <string name="whitelist">Whitelist</string>
    <string name="whitelist_title">Select Apps to be Whitelisted</string>
    <string name="whitelist_subtitle">Whitelisted apps will appear on the home screen.</string>
    <string name="whitelist_accept_button">Accept</string>

    <!-- Lock Screen -->
    <string name="lock_title">Locked</string>
    <string name="submit_time">OK</string>
    <string name="cancel">Cancel</string>
    <string name="edit_button">Set Time</string>
    <string name="select_media">Select Media to Lock</string>
    <string name="lock_app_picker_title">Select an App to Lock</string>
    <string name="sample_text">Sample Text</string>
    <string name="set_lock_time">Set Lock Period</string>
    <string name="ok">OK</string>

    <!-- App Icon -->
    <string name="app_icon_image">App Icon Image</string>
    <string name="app_icon_text">App Name</string>

    <!-- App List -->
    <string name="app_list_item_default">App Item</string>
    <string name="app_list_content">App List</string>
    <string name="app_list_filter_content">App List Settings</string>
    <string name="time_left_timer_text">Locked Time Countdown</string>
    <!-- App List Filter -->
    <string name="option1">Custom</string>
    <string name="option2">A-Z</string>
    <string name="option3">Z-A</string>
    <string name="option4">New-Old</string>
    <string name="option5">Old-New</string>
    <string name="filter_icon">Filter Icon</string>

    <!-- Full Screen Overlay & Blur -->
    <string name="channel_name">OverlayNotifChannel</string>
    <string name="channel_description">OverlayNotifDescription</string>
    <string name="notification_content_title">NotifContentTitle</string>
    <string name="accessibility_service_label">App Blur Overlay</string>

    <!-- Splash Screen -->
    <string name="splash_icon_text">Splash Icon</string>

    <!-- Settings Screen -->
    <string name="set_locked_app_style">Set Locked App Style</string>
    <string name="set_locked_app_style_key">set_locked_app_style</string>
    <string name="set_locked_app_style_summary">Choose whether locked apps appear as greyscale or invisible.</string>
    <string-array name="pref_locked_app_style">
        <item>Greyscale</item>
        <item>Invisible</item>
    </string-array>
    <string-array name="pref_locked_app_style_values">
        <item>3</item>
        <item>4</item>
    </string-array>

    <string name="set_app_screen_style">Set Home Screen Style</string>
    <string name="set_app_screen_style_key">set_app_screen_style</string>
    <string name="set_app_screen_style_summary">Choose whether apps on the home screen appear as colored, greyscale, or black and white.</string>
    <string-array name="pref_app_screen_style">
        <item>Normal</item>
        <item>Greyscale</item>
        <item>Black and White</item>
    </string-array>
    <string-array name="pref_app_screen_style_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="set_screen_layout_key">set_screen_layout_key</string>
    <string name="set_screen_layout">Set Screen Layout</string>
    <string name="set_screen_layout_summary">Choose whether the home screen shows as an app grid or an app list.</string>
    <string-array name="pref_screen_layout">
        <item>App Grid</item>
        <item>App List</item>
    </string-array>
    <string-array name="pref_screen_layout_values">
        <item>5</item>
        <item>6</item>
    </string-array>

</resources>